small bug squashes, write a review, update vendor styles

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -327,6 +327,7 @@ h4 {
 
 #vendor-information{
   float: left;
+  height: 100%;
   width: 45%;
   margin-right: 50px;
     h3{
@@ -420,7 +421,14 @@ h4 {
   padding: 20px;
   margin-left: 10px;
   background-color: white;
+}
+}
 
+@media only screen and (max-width: 500px) { 
+.nav {
+  .stripe {
+   
 
+}
 }
 }
